# video_fingerprinting

./: .gitignore  Makefile  pyproject.toml
src/: config.py  create_database.py  generation.py  knn_matching.py  matching.py  setup_database.py
