[tool.poetry]
name = "video-fingerprinting"
version = "0.1.0"
description = ""
authors = ["Hadi Houssainy <hadihoussainy75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
scipy = "^1.12.0"
psycopg2 = "^2.9.9"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
